infrastructure/k8s/sql/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: avigoldshtein-dev
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
