infrastructure/k8s/sql/python-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: avigoldshtein-dev
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 8000       # הפורט הפנימי שאליו ה־Deployment מאזין
      targetPort: 8000
  type: ClusterIP      # סוג Service פנימי
